adding some business logic and other

--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,10 @@ jacoco {
 }
 
 test {
-	jacoco {
-		enabled = true
-	}
+	finalizedBy jacocoTestReport
 }
+jacocoTestReport {
+	dependsOn test
+}
+
+
