--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 mapstructVersion = 1.5.3.Final
-springBootVersion = 3.1.2
-springDependencyManagementVersion = 1.1.2
+springBootVersion = 3.0.0
+springDependencyManagementVersion = 1.1.0
+testContainersVersion = 1.17.6
