--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ springBootVersion = 3.1.2
 springDependencyManagementVersion = 1.1.2
 jacocoVersion = 0.8.10
 springDocOpenApiVersion = 2.2.0
+restAssuredVersion = 5.3.0
